Fixed spacing and margins for form

--- a/src/pages/Profile.css
+++ b/src/pages/Profile.css
@@ -47,11 +47,13 @@
 .profile-main {
   background-color: #fff;
   padding: 20px;
+  padding-top: 0px;
   width: calc(100% - 250px); /* Adjust based on sidebar width */
 }
 
 .profile-header {
-  margin-top: 10px;
+  margin-top: 20px;
+  margin-bottom: 20px;
   font-size: 30px;
   font-weight: bolder;
   color: #333;
@@ -91,7 +93,11 @@
 .profile-form {
   display: flex;
   flex-direction: column;
-  margin-top: 10px;
+  margin-top: 20px;
+  padding-top: 0px;
+  margin-left: 0px;
+  margin-right: 0px;
+  width: 80%;
 }
 
 .profile-input {
@@ -174,18 +180,28 @@
 }
 
 .settings-header {
-  margin-top: 10px;
+  margin-top: 20px;
+  margin-bottom: 20px;
   font-size: 30px;
   font-weight: bolder;
   color: #333;
 }
 
 .settings2-header {
-  margin-top: 10px;
+  margin-top: 0px;
+  margin-bottom: 10px;
   font-size: 20px;
   font-weight: bolder;
   color: #333;
 }
+
+.settings3-header {
+  font-size: 14px;
+  font-weight: normal;
+  color: #333;
+  margin-bottom: 10px;
+}
+
 
 .settings-content {
   display: flex;
@@ -223,7 +239,7 @@
 }
 
 .save-colors-btn {
-  margin-top: 20px; /* Spacing from the grid */
+  margin-top: 10px; /* Spacing from the grid */
   padding: 10px;
   background-color: #f96d80;
   color: white;
